--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="enter_email">Enter email</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="re_enter_password">Re Enter Password</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
 </resources>
